[tool.black]
line-length = 79

[tool.poetry]
# I use poetry as just a package manager.
# So, I only write the settings that poetry needs.
# The actual package metadata is written in setup.cfg.
# I use pypa/build for packaging.
name = "dict_zip"
version = "0.0.0"
description = ""
authors = []
packages = [
    { include = "dict_zip" },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
black = "*"
pytest = "*"
isort = "*"
pyupgrade = "*"
pytest-cov = "*"
flake8 = "*"
mypy = "*"
poethepoet = "*"
setuptools-scm = "*"
build = "*"

[build-system]
requires = [
    "setuptools", "setuptools_scm"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "dict_zip/_version.py"

[tool.poe.tasks]
test = "pytest"
coverage-xml = "pytest --cov=dict_zip --doctest-modules --cov-report=xml"
generate-type-stubs = { shell = "python generate_type_stub.py > dict_zip/__init__.pyi"}
format = [
    { cmd = "isort dict_zip"},
    { cmd = "black dict_zip"},
    { cmd = "pyupgrade --py38-plus dict_zip/*.py"},
]
check = [
    { cmd = "isort --check-only --diff dict_zip"},
    { cmd = "black --check --diff dict_zip"},
    { cmd = "flake8 dict_zip"},
    { cmd = "mypy dict_zip"},
]
build = [
    { cmd = "python -m build"}
]

[tool.mypy]
# https://mypy.readthedocs.io/en/latest/config_file.html
ignore_missing_imports = true
disallow_any_decorated = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_unused_ignores = true
warn_return_any = true
