[metadata]
author = Yui Kitsu
author_email = kitsuyui+github@kitsuyui.com
name = dict_zip
description = zip and zip_longest for dict
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause
license_files = LICENSE
url = https://github.com/kitsuyui/dict_zip
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries

[options]
packages = dict_zip
test_suite = tests
python_requires = >= 3.7

[options.package_data]
* = README.md, LICENSE
dict_zip = py.typed
